p3/tests/t003.err
Parse error on line 1 reported by parser: syntax error, unexpected identifier, expecting $end.
