p3/tests/t003.gpl
float f=99.26;
